--- a/assets/style.css
+++ b/assets/style.css
@@ -199,9 +199,24 @@ flex-direction: row-reverse;
 .second-last:hover::before {
     width: 100%; /* Expands fully */
 }
-
-
-
+.last-dd{
+    display:inline-block;
+    position: relative;
+    width: 80%;
+}
+.last-dd::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0; /* Start with zero width */
+    height: 2px; /* Thickness of the underline */
+    background-color: currentColor; /* Match text color */
+    transition: width 0.3s ease-in-out; /* Smooth expansion */
+}
+.last-dd:hover::before {
+    width: 100%; /* Expands fully */
+}
 
 
 .dd-2 a{
@@ -253,9 +268,6 @@ flex-direction: row-reverse;
     opacity: 0.5;   
 }
 
-.second-dd{
-
-}
 
 
 /*-----drop down toggle-------**/
@@ -268,7 +280,9 @@ flex-direction: row-reverse;
 .dd-3.active{
     display: block;
 }
-
+.dd-4.active{
+    display: block;
+}
 
 
 /*hover effects css part side bar*/
